--- a/vcbridge-admin/application/src/main/resources/templates/createMeeting.html
+++ b/vcbridge-admin/application/src/main/resources/templates/createMeeting.html
@@ -10,77 +10,84 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layout">
-	
+
 <div layout:fragment="content">
 
-<div class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+	<div
+		class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
 
-            <div class="col-md-8">
-                <div class="card-group mb-0">
-                    <div class="card p-4">
-                        <div class="card-block">
-                            <h1>Create meeting</h1>
-                            <p class="text-muted">Schedule a conference meeting</p>
-                            <div th:if="${param.error}">
-                                Invalid username and password.
-                            </div>
-                            <div th:if="${param.logout}">
-                                You have been logged out.
-                            </div>
-                            <form id="createMeetingForm" action="#" th:action="@{/createMeeting}" th:object="${meetingForm}" method="post">
-                                <div class="input-group mb-3">
-                                    <span class="input-group-addon"><i class="icon-calendar"></i>
-                                    </span>
-                                    <input type="datetime-local" value="" required="true" class="form-control datetimeinput" placeholder="2011-12-03T10:15:30+01:00"/>
-                                    <input hidden="true" type="text" class="form-control datetimeoutput" th:field="*{start}" placeholder="2011-12-03T10:15:30+01:00"/>
-                                    <select id="selecttimezone" class="selectpicker" name="timeZone"></select>
-                                    
-                                   
-                                    <td th:if="${#fields.hasErrors('start')}" th:errors="*{start}">Start Error</td>
-                                </div>
-                                <div class="input-group mb-4">
-                                    <span class="input-group-addon"><i class="icon-bell"></i>
-                                    </span>
-                                    <input type="time" class="form-control" th:field="*{duration}"/>
-                                    <td th:if="${#fields.hasErrors('duration')}" th:errors="*{duration}">Duration Error</td>
-                                </div>
-                                <table class="table">
-                                <div class="input-group mb-4">
-                                    <span class="input-group-addon"><i class="icon-user"></i></span>
-                                    <input class="form-control" type="email" id="new_email" placeholder="Enter email"/>
-                                    <button id="add_field_button" class="btn btn-primary">Add</button>
-                                </div>
-                                <thead>
-                                  <tr>
-                                    <th>Select</th>
-                                    <th>Participants in meeting</th>
-                                  </tr>
-                                </thead>
-                                <tbody class="input_fields_wrap">
-                                    <tr class="useremail" th:each="email, stat : ${meetingForm.emails}">         
-                                        <td><input class="todelete" type="checkbox" value=""></input></td>
-                                        <td><input hidden="true" type="text" class="form-control" th:field="*{emails[__${stat.index}__]}" th:value="${email}"/><div th:text="${email}"></div></td>
-                                    </tr>
-                                </tbody>
-                                </table>
-                                <div class="row">
-                                	<div class="col-6">
-                                		<button id="delete_button" class="btn btn-primary px-4">Delete</button>
-                                	</div>
-                                    <div class="col-12 text-right">
-                                    	<button value="Create" type="submit" class="btn btn-primary px-4">Create</button>
-                                    	<a th:href="@{/listMeeting}" class="btn btn-primary px-4">Cancel</a>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-</div>
+		<div class="col-md-8">
+			<div class="card-group mb-0">
+				<div class="card p-4">
+					<div class="card-block">
+						<h1>Create meeting</h1>
+						<p class="text-muted">Schedule a conference meeting</p>
+						<div th:if="${param.error}">Invalid username and password.</div>
+						<div th:if="${param.logout}">You have been logged out.</div>
+						<form id="createMeetingForm" action="#"
+							th:action="@{/createMeeting}" th:object="${meetingForm}"
+							method="post">
+							<div class="input-group mb-3">
+								<span class="input-group-addon"><i class="icon-calendar"></i>
+								</span> <input type="datetime-local" th:value="${{meetingForm.start}}" required="true"
+									class="form-control datetimeinput"
+									placeholder="2011-12-03T10:15:30+01:00" /> <input
+									hidden="true" type="text" class="form-control datetimeoutput"
+									th:field="*{start}" placeholder="2011-12-03T10:15:30+01:00" />
+								<select id="selecttimezone" class="selectpicker" name="timeZone"></select>
+
+
+								<td th:if="${#fields.hasErrors('start')}" th:errors="*{start}">Start
+									Error</td>
+							</div>
+							<div class="input-group mb-4">
+								<span class="input-group-addon"><i class="icon-bell"></i>
+								</span> <input type="time" class="form-control" th:field="*{duration}" />
+								<td th:if="${#fields.hasErrors('duration')}"
+									th:errors="*{duration}">Duration Error</td>
+							</div>
+							<table class="table">
+								<div class="input-group mb-4">
+									<span class="input-group-addon"><i class="icon-user"></i></span>
+									<input class="form-control" type="email" id="new_email"
+										placeholder="Enter email" />
+									<button id="add_field_button" class="btn btn-primary">Add</button>
+								</div>
+								<thead>
+									<tr>
+										<th>Select</th>
+										<th>Participants in meeting</th>
+									</tr>
+								</thead>
+								<tbody class="input_fields_wrap">
+									<tr class="useremail"
+										th:each="email, stat : ${meetingForm.emails}">
+										<td><input class="todelete" type="checkbox" value=""></input></td>
+										<td><input hidden="true" type="text" class="form-control"
+											th:field="*{emails[__${stat.index}__]}" th:value="${email}" />
+											<div th:text="${email}"></div></td>
+									</tr>
+								</tbody>
+							</table>
+							<div class="row">
+								<div class="col-6">
+									<button id="delete_button" class="btn btn-primary px-4">Delete</button>
+								</div>
+								<div class="col-12 text-right">
+									<button value="Create" type="submit"
+										class="btn btn-primary px-4">Create</button>
+									<a th:href="@{/listMeeting}" class="btn btn-primary px-4">Cancel</a>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <div layout:fragment="scripts">
-<script>
+	<script>
 $(document).ready(function() {
     var max_fields      = 10; //maximum input boxes allowed
     var wrapper         = $(".input_fields_wrap"); //Fields wrapper
@@ -100,17 +107,23 @@ $(document).ready(function() {
 	});
     $(add_button).click(function(e){ //on add input button click
         e.preventDefault();
-	    $(wrapper).append('<tr class="useremail"><td><input class="todelete" type="checkbox" value=""></input></td><td><input hidden="true" class="form-control" type="text" value="' + new_email.val() + '" name="emails['+x+']"/><div>'+new_email.val()+'</div></td></tr>'); //add input box
-	    new_email.val("");
-	    new_email.focus();
-	    x++; //text box increment
+    	if(new_email.val() != ""){
+		    $(wrapper).append('<tr class="useremail"><td><input class="todelete" type="checkbox" value=""></input></td><td><input hidden="true" class="form-control" type="text" value="' + new_email.val() + '" name="emails['+x+']"/><div>'+new_email.val()+'</div></td></tr>'); //add input box
+		    new_email.val("");
+		    new_email.focus();
+		    x++; //text box increment
+    	}
     });
     $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
         e.preventDefault(); $(this).parent('div').remove(); x--;
     });
     $('#createMeetingForm').on('submit', function(e) { //use on if jQuery 1.7+
         e.preventDefault();  //prevent form from submitting
+        console.log($(".datetimeinput").val());
+        
         $(".datetimeoutput").val(moment.tz($(".datetimeinput").val(),$("#selecttimezone").val()).format());
+        console.log($("#selecttimezone").val());
+        console.log($(".datetimeoutput").val());
         this.submit();
     });
     
@@ -118,7 +131,7 @@ $(document).ready(function() {
 });
 
 </script>
-<!-- <script src="resources/js/bootstrap-select.min.js"></script> -->
-<script type="text/javascript" src="resources/js/timezones.js"></script>
+	<!-- <script src="resources/js/bootstrap-select.min.js"></script> -->
+	<script type="text/javascript" src="resources/js/timezones.js"></script>
 </div>
 </html>
