Email templates UI and improved functionality using Async annotation for email service invocations

--- a/vcbridge-admin/application/src/main/resources/templates/email/cancellation.html
+++ b/vcbridge-admin/application/src/main/resources/templates/email/cancellation.html
@@ -13,7 +13,7 @@
 </head>
 <body class="app flex-row align-items-center">
 	<h3>Dear <span th:text="${email}"></span>,</h3>
-	<p>he meeting at <span th:text="${meeting_date}"></span> and <span th:text="${meeting_time}"></span> has been cancelled.</p>
+	<p>The meeting at <span th:text="${meeting_date}"></span> and <span th:text="${meeting_time}"></span> has been cancelled.</p>
 	
 	Best regards,
 	<p><span th:text="${user_first}"></span>,<span th:text="${user_lastname}"></span></p>
