--- a/vcbridge-admin/application/src/main/resources/templates/listMeeting.html
+++ b/vcbridge-admin/application/src/main/resources/templates/listMeeting.html
@@ -26,7 +26,7 @@
 								<table class="table">
 									<thead>
 										<tr>
-											<th><input type="checkbox" value=""></input></th>
+											<th><input type="checkbox" id="selectall" value=""></input></th>
 											<th>Start Date and Time</th>
 											<th>Duration</th>
 											<th>Participants</th>
@@ -34,9 +34,10 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:each="meeting, stat : ${meetings}">
-											<th scope="row"><input type="checkbox" name="id"
-												th:value="${meeting.id}"></input></th>
+										<tr class="currentmeeting"
+											th:each="meeting, stat : ${meetings}">
+											<th scope="row"><input class="todelete" type="checkbox"
+												name="id" th:value="${meeting.id}"></input></th>
 											<td th:text="${{meeting.start}}">start</td>
 											<td th:text="${{meeting.duration}}">duration</td>
 											<td th:text="${#lists.size(meeting.participants)}">#ofparticipants</td>
@@ -55,10 +56,10 @@
 
 					</div>
 				</div>
-				
+
 			</div>
 			<div class="card-group mb-0">
-			<div class="card p-4">
+				<div class="card p-4">
 					<div class="card-block">
 						<h1>Past meetings</h1>
 						<div th:if="${pastMeetings.empty}">Nothing to diplay yet</div>
@@ -101,19 +102,19 @@
 							var new_email = $("#new_email"); // new email input
 							var x = 0; //initlal text box count
 
-							$(delete_button).click(
-									function(e) {
-										e.preventDefault();
-										$("tr.useremail").each(
+							$("#selectall").change(
+									function() {
+										checked = this.checked;
+										$("tr.currentmeeting").each(
 												function() {
-													$this = $(this)
-													if ($(this).find(
+													$this = $(this);
+													$(this).find(
 															"input.todelete")
-															.is(":checked")) {
-														$(this).remove();
-													}
+															.prop('checked',
+																	checked);
 												});
 									});
+
 							$(add_button)
 									.click(
 											function(e) { //on add input button click
